07/27/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update todo task for release after .5.3.

07/27/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Move final task for .5.3.
	* readline-5.0/configure (opt_shared_libs): Modified default value
	from yes to no.

07/26/2005 Bob Rossi <bob@brasko.net>

	* FAQ: Update.
	* RELEASE_TODO: Update todo for next release.

07/26/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about new temporary breakpoint functionality.

07/26/2005 Marcel Lanz <marcel.lanz@ds9.ch>

	* README (Source Window): Changed 't' key to be the 'I' key.
	(Source Window): Added new documentation for the 't' key.

07/23/2005 Mike Mueller <mike@subfocal.net>

    * cgdb/src/sources.c: Fixed crash and better respect of tabs in
    draw_current_line (the new arrowstyle method).

07/14/2005 Bob Rossi <bob@brasko.net>

	* README: Added documentation for packaged readline
	* RELEASE_TODO: Updated necessary work to do for next release.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Added $(READLINE_DIR).
	(EXTRA_DIST): Ditto.
	(DIST_SUBDIRS): Add the list of directories to be installed.
	* Makefile.in: Autogenerated.
	* config.h.in: Ditto.
	* configure: Ditto.
	* configure.in: Add support for internal or system readline.
	* various/Makefile.in: Autogenerated.

06/30/2005 Bob Rossi <bob@brasko.net>

   * README (Window Key): Window key can not be read in.

06/24/2005 Mike Mueller <mike@subfocal.net>

    * Fixed arrowstyle bugs:
        1. Tabs were broken, not treated as whitespace (results in short arrow)
        2. Arrow drawn on top of code when horizontally scrolled
    * RELEASE_TODO (cgdb-0.5.3): Updated arrow and ACS issues
    * README: Added documentation for the arrowstyle option

06/20/2005 Bob Rossi <bob@brasko.net>

    * RELEASE_TODO (cgdb-0.5.3): Add new task for .5.3.

06/18/2005 Mike Mueller <mike@subfocal.net>

    * NEWS: Added a new 'arrowstyle' option at a user's request

05/26/2005 Bob Rossi <bob@brasko.net>
