@@ -3,7 +3,7 @@
 # the rest of the directories have a make dist rule run on them
 SUBDIRS=$(READLINE_DIR) various tgdb cgdb
 DIST_SUBDIRS=various tgdb cgdb
-EXTRA_DIST=config $(READLINE_DIR)
+EXTRA_DIST=config $(top_srcdir)/$(READLINE_DIR)
 
 # The order is important here.
 # various is the lowest level, so it must be done first.
