@@ -1,3 +1,8 @@
+07/28/2005 Bob Rossi <bob@brasko.net>
+
+	* Makefile.am (EXTRA_DIST): Fix READLINE_DIR directory.
+	* Makefile.in: Autogenerated.
+
 07/27/2005 Bob Rossi <bob@brasko.net>
 
 	* RELEASE_TODO: Update todo task for release after .5.3.
